--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
 <h1 align="middle">Zuf&auml;llige NSC Beschreibungen</h1>
 <br><p align="middle"><button id="neuerNSC">Neuer NSC</button></p><br>
 <table border="1" align="center">
-<tr><td><h2 align="middle"><div id="displayAttribut1"></div></h2></td></tr>
-<tr><td><h2 align="middle"><div id="displayAttribut2"></div></h2></td></tr>
-<tr><td><h2 align="middle"><div id="displayBeruf"></div></h2></td></tr>
-<tr><td><h2 align="middle"><div id="displayAlter"></div></h2></td></tr>
-<tr><td><h2 align="middle"><div id="displayGeschlecht"></div></h2></td></tr>
+<tr><td>Größe</td><td><h2 align="middle"><div id="displayGroesse"></div></h2></td><td width="10%"></td>
+<td>Statur</td><td><h2 align="middle"><div id="displayStatur"></div></h2></td></tr>
+<tr><td>Haarfarbe</td><td><h2 align="middle"><div id="displayHaarfarbe"></div></h2></td><td width="10%"></td>
+<td>Haarlänge</td><td><h2 align="middle"><div id="displayHaarlaenge"></div></h2></td></tr>
+<tr><td>Haarform</td><td><h2 align="middle"><div id="displayHaarform"></div></h2></td><td width="10%"></td>
+<td>Bart</td><td><h2 align="middle"><div id="displayBart"></div></h2></td></tr>
+<tr><td>Stirn</td><td><h2 align="middle"><div id="displayStirn"></div></h2></td><td width="10%"></td>
+<td>Augenfarbe</td><td><h2 align="middle"><div id="displayAugenfarbe"></div></h2></td></tr>
+<tr><td>Nase</td><td><h2 align="middle"><div id="displayNase"></div></h2></td><td width="10%"></td>
+<td>Mundwinkel</td><td><h2 align="middle"><div id="displayMundwinkel"></div></h2></td></tr>
+<tr><td>Zähne</td><td><h2 align="middle"><div id="displayZaehne"></div></h2></td><td width="10%"></td>
+<td>Kinn</td><td><h2 align="middle"><div id="displayKinn"></div></h2></td></tr>
+<tr><td>Hals</td><td><h2 align="middle"><div id="displayHals"></div></h2></td><td width="10%"></td>
+<td>Besonderes</td><td><h2 align="middle"><div id="displayBesonderes"></div></h2></td></tr>
 </table>
 <script src='javascript.js'></script>
 </body>
